ipsvd 0.10.0

  * doc/install.html: typo.
  * sslerror_str.c, sslerror_str.h: new; ssl error strings.
  * sslio.c: improve logging, error messages, use sslerror_str; new option
    -c client support to run under tcpclient.
  * uidgid.c: improve error handling.
  * Makefile, man/sslio.8: adapt.

ipsvd 0.9.7
Fri, 03 Dec 2004 10:15:37 +0000
  * ipsvd_check.c: catch all failures of openreadclose(); disregard
    hostnames (looked up in dns) starting with a dot; fix cdb check on check
    hostname instruction with non-existent forward to match instruction
    directory behavior (deny connection).
  * ipsvd_hostname.c: properly handle failure and nxdomain/noptr of
    dns_name4().
  * doc/examples.html: minor.
  * tcpsvd.c: bug: socka didn't get updated after ECONNABORTED from accept();
    fix: re-set socka_size for each connection (thx Sergei Kolobov).

ipsvd 0.9.6
Mon, 02 Aug 2004 19:18:50 +0000
  * sslio.c: minor cleanup; adapt few verbose log messages; detect
    successful handshake through matrixSslHandshakeIsComplete().
  * doc/install.html, Makefile: use library from src/matrixssl.tar.gz.

ipsvd 0.9.5
Wed, 14 Jul 2004 19:43:48 +0000
  * man/sslio.8: notations.
  * ipsvd_check.c: only parse concurrency instruction if phcc is enabled.
  * tcpsvd.c: bug: concurrency instruction C0 denied connection, fix: C0
    correctly disables phcc (thx Torne).
  * package/compile, package/install-man, package/upgrade: mkdir -p dir ->
    mkdir -p dir/.; ignore grep's return code (fixes build failure on
    solaris, thx Uffe Jakobsen).
  * Makefile: target check-tcpsvd, check-udpsvd: add libraries needed for
    socket() (fixes testing failure on solaris, thx Uffe Jakobsen); use
    matrixssl-1.1.2 with sslio.
  * doc/index.html: minor.

ipsvd 0.9.4
Sat, 19 Jun 2004 14:47:09 +0000
  * doc/benefits.html, man/tcpsvd.8: typos (thx David Thiel).
  * doc/install.html, Makefile: use matrixssl-1.1.1 with sslio.
  * tcpsvd.check, udpsvd.check: use -llocalhost.

ipsvd 0.9.3