@@ -16,14 +16,14 @@ If you don't have a <tt>/package</tt> directory, create it now:
  # mkdir -p /package
  # chmod 1755 /package
 </pre>
-Download <a href="ipsvd-0.9.7.tar.gz">ipsvd-0.9.7.tar.gz</a> into
+Download <a href="ipsvd-0.10.0.tar.gz">ipsvd-0.10.0.tar.gz</a> into
 <tt>/package</tt> and unpack the archive
 <pre>
  # cd /package
- # gunzip ipsvd-0.9.7.tar
- # tar -xpf ipsvd-0.9.7.tar
- # rm ipsvd-0.9.7.tar
- # cd net/ipsvd-0.9.7
+ # gunzip ipsvd-0.10.0.tar
+ # tar -xpf ipsvd-0.10.0.tar
+ # rm ipsvd-0.10.0.tar
+ # cd net/ipsvd-0.10.0
 </pre>
 If you are installing on Linux, and want to make the
 <a href="sslio.8.html">sslio</a> program available, download the
@@ -46,7 +46,7 @@ hierarchy, do
 </pre>
 To report success:
 <pre>
- # mail pape-ipsvd-0.9.7@smarden.org &lt;compile/sysdeps
+ # mail pape-ipsvd-0.10.0@smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>ipsvd</i> regularly, please
 <a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
