@@ -1,0 +1,24 @@
+0.1.3
+0.1.6
+0.2.0
+0.3.0
+0.3.4
+0.4.0
+0.4.1
+0.5.0
+0.6.0
+0.6.1
+0.7.0
+0.7.1
+0.8.0
+0.8.1
+0.8.2
+0.9.0
+0.9.1
+0.9.2
+0.9.3
+0.9.4
+0.9.5
+0.9.6
+0.9.7
+0.10.0
